<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/padding_10"
    android:layout_marginTop="@dimen/padding_10"
    android:layout_marginRight="@dimen/padding_10"
    android:layout_marginBottom="@dimen/pad60"
    android:background="@color/color_primary"
    android:fitsSystemWindows="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout

        android:id="@+id/header_battery"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/navmenu"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/drawer_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:fontFamily="@fonts/robotoreg"
            android:text="@string/chargehistory"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_view"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/card_view"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_10"
            android:paddingRight="@dimen/padding_10">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <org.eazegraph.lib.charts.PieChart xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/piechart"
                    android:layout_marginTop="@dimen/padding_10"
                    android:layout_width="190dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center|center_vertical|center_horizontal"
                    android:fitsSystemWindows="true"
                    app:egAutoCenter="true"
                    app:egEmptyDataText=""
                    app:egLegendColor="@color/color_primary"
                    app:egLegendTextSize="5dp"
                    app:egUsePieRotation="true"
                    app:egValueTextColor="@color/black"
                    app:egValueTextSize="@dimen/padding_12" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="-20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center|center_vertical"
                android:orientation="vertical">

                <RelativeLayout
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView

                        android:drawablePadding="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@fonts/robotoreg"
                        android:text="@string/normal"
                        android:layout_alignParentStart="true"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="10dp"
                        android:layout_alignParentLeft="true"
                        app:drawableLeftCompat="@drawable/dotnormal"
                        android:drawableLeft="@drawable/dotnormal"
                        app:drawableTint="@color/blutxtclr"
                        app:drawableStartCompat="@drawable/dotnormal"
                        android:drawableStart="@drawable/dotnormal" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@fonts/robotoreg"
                        android:gravity="end"
                        android:text="22"
                        android:textAllCaps="false"
                        android:textColor="@color/blutxtclr"
                        android:textSize="10dp"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_20"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:drawablePadding="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@fonts/robotoreg"
                        android:text="@string/healthy"
                        android:layout_alignParentStart="true"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="10dp"
                        android:layout_alignParentLeft="true"
                        app:drawableStartCompat="@drawable/dotnormal"
                        app:drawableTint="@color/grnclr"
                        app:drawableLeftCompat="@drawable/dotnormal" />

                    <TextView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/padding_50"
                        android:fontFamily="@fonts/robotoreg"
                        android:text="10"
                        android:textAllCaps="false"
                        android:textColor="@color/blutxtclr"
                        android:textSize="10dp"
                        android:layout_alignParentRight="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/padding_20"

                    android:orientation="horizontal">

                    <TextView
                        android:drawablePadding="3dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:fontFamily="@fonts/robotoreg"
                        android:text="@string/overcharge"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="10dp"
                        app:drawableStartCompat="@drawable/dotnormal"
                        android:drawableStart="@drawable/dotnormal"
                        app:drawableTint="@color/redalrtclr"
                        app:drawableLeftCompat="@drawable/dotnormal"
                        android:drawableLeft="@drawable/dotnormal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:fontFamily="@fonts/robotoreg"
                        android:gravity="end"
                        android:text="22"
                        android:textAllCaps="false"
                        android:textColor="@color/blutxtclr"
                        android:textSize="10dp" />
                </RelativeLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_view"
        android:orientation="vertical"
        android:padding="@dimen/padding_20">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_20"
            android:src="@drawable/fast_charge"
            android:text="@string/lastchargerec"
            android:textColor="@color/blutxtclr" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@fonts/robotoreg"
                    android:text="@string/sincelastfulchrg"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@fonts/robotoreg"
                    android:text="22"
                    android:textAllCaps="false"
                    android:textColor="@color/blutxtclr"
                    android:textSize="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@fonts/robotoreg"
                    android:text="@string/chrgtyp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@fonts/robotoreg"
                    android:text="10"
                    android:textAllCaps="false"
                    android:textColor="@color/blutxtclr"
                    android:textSize="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@fonts/robotoreg"
                    android:text="@string/chargedurtion"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/padding_50"
                    android:fontFamily="@fonts/robotoreg"
                    android:text="22"
                    android:textAllCaps="false"
                    android:textColor="@color/blutxtclr"
                    android:textSize="10dp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_20"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:fontFamily="@fonts/robotoreg"
                    android:text="@string/chargeqty"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="@dimen/padding_50"
                    android:fontFamily="@fonts/robotoreg"
                    android:text="22"
                    android:textAllCaps="false"
                    android:textColor="@color/blutxtclr"
                    android:textSize="10dp" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_view"
        android:orientation="vertical"
        android:padding="@dimen/padding_20">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:fontFamily="@fonts/robotoreg"
            android:text="@string/Lastchargrecords"
            android:textAllCaps="true"
            android:layout_marginBottom="@dimen/padding_10"
            android:textColor="@color/blutxtclr"
            android:textSize="14dp" />
        <com.github.mikephil.charting.charts.LineChart
            android:layout_marginTop="@dimen/padding_40"
android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:id="@+id/line_chart"/>
    </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
